# mcp

./: .gitignore  Anuvaad_INDB_2024.11.csv  app.py  frontend.py  new_food_qdrant_system.py  pyproject.toml  requirements.txt  restaurant_api.py
api/: dishes.csv  dishes.db  main.py  requirements.txt
